# ghc-definitions-th

./: CHANGELOG.md  ghc-definitions-th.cabal
src/GHC/Definitions/: TH.hs
src/GHC/Definitions/TH/: Example.hs
