cabal-version:      2.4
name:               ghc-definitions-th
version:            0.1
synopsis:           Automatically generate GHC API counterparts to Haskell
                    declarations.
description:        Template Haskell functions for automatically generating
                    definitions for @TyCon@s, @Var@s, and @DataCon@s of known
                    type constructors, functions, and data constructors.
                    Primarily intended for the development of type checker
                    plugins.
homepage:           https://github.com/YellPika/ghc-definitions-th
bug-reports:        https://github.com/YellPika/ghc-definitions-th/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Anthony Vandikas
maintainer:         yellpika@gmail.com
copyright:          © 2021 Anthony Vandikas
category:           GHC, Template Haskell
extra-source-files: CHANGELOG.md

library
  exposed-modules:  GHC.Definitions.TH,
                    GHC.Definitions.TH.Example
  other-extensions: BlockArguments,
                    ConstraintKinds,
                    PatternSynonyms,
                    TemplateHaskell,
                    UnicodeSyntax,
                    ViewPatterns
  build-depends:    base             >=4.14 && <4.17,
                    constraints      >=0.13 && <0.15,
                    ghc              >=8.10 && <9.3,
                    template-haskell >=2.16 && <2.19
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
